<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ads="http://schemas.android.com/apk/res-auto"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/ll_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFF"
              android:orientation="vertical"
              android:weightSum="9">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">


        <ImageView
            android:id="@+id/iv_gillu"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/gillu_the_gilahri"
            android:padding="10dp"/>


        <ImageView
            android:id="@+id/iv_board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/number_display_board"
            android:padding="10dp"/>

        <ImageView
            android:id="@+id/iv_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/number"
            android:padding="50dp"/>

    </RelativeLayout>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:columnCount="10"
        app:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_nut1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/nut"
            android:padding="5dp"
            app:layout_columnWeight="1"/>

        <ImageView
            android:id="@+id/iv_nut2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/nut"
            android:padding="5dp"
            app:layout_columnWeight="1"/>

        <ImageView
            android:id="@+id/iv_nut3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/nut"
            android:padding="5dp"
            app:layout_columnWeight="1"/>

        <ImageView
            android:id="@+id/iv_nut4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/nut"
            android:padding="5dp"
            app:layout_columnWeight="1"/>

        <ImageView
            android:id="@+id/iv_nut5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/nut"
            android:padding="5dp"
            app:layout_columnWeight="1"/>

        <ImageView
            android:id="@+id/iv_nut6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/nut"
            android:padding="5dp"
            app:layout_columnWeight="1"/>

        <ImageView
            android:id="@+id/iv_nut7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/nut"
            android:padding="5dp"
            app:layout_columnWeight="1"/>

        <ImageView
            android:id="@+id/iv_nut8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/nut"
            android:padding="5dp"
            app:layout_columnWeight="1"/>

        <ImageView
            android:id="@+id/iv_nut9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/nut"
            android:padding="5dp"
            app:layout_columnWeight="1"/>

    </android.support.v7.widget.GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/layout_bg">

        <ImageView
            android:id="@+id/iv_garden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:alpha="0.4"
            android:contentDescription="@string/garden"/>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:columnCount="3"
            app:orientation="horizontal">


            <ImageButton
                android:id="@+id/btn_1"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/number_button"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>


            <ImageButton
                android:id="@+id/btn_2"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/number_button"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <ImageButton
                android:id="@+id/btn_3"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/number_button"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>


            <ImageButton
                android:id="@+id/btn_4"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/number_button"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <ImageButton
                android:id="@+id/btn_5"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/number_button"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <ImageButton
                android:id="@+id/btn_6"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/number_button"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <ImageButton
                android:id="@+id/btn_7"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/number_button"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <ImageButton
                android:id="@+id/btn_8"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/number_button"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>

            <ImageButton
                android:id="@+id/btn_9"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/number_button"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>


        </android.support.v7.widget.GridLayout>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5130460669609348/2327539315">
    </com.google.android.gms.ads.AdView>

</LinearLayout>